Updated version number to 1.4.

--- a/graphicstext/news-for-web.html
+++ b/graphicstext/news-for-web.html
@@ -32,6 +32,12 @@
 <h2>News for <a href="index.html"><i>Introduction to Computer Graphics</i></a></h2>
 
 <ul>
+<li><b>Summer, 2023</b> &mdash; <b>New chapter on WebGPU</b>.  In spite of saying previously
+that this textbook was in final form, I have decided to add a new chapter on WebGPU. I am writing it
+over the summer.  You can see what I have so far at 
+<a href="https://math.hws.edu/eck/cs424/graphicsbook-1.4/c9/index.html">this&nbsp;link</a>.</li>
+<li><b>December 17, 2022</b> &mdash; I have now retired from teaching.  I do not plan any further updates 
+to this textbook. &mdash;<a href="https://math.hws.edu/eck/index.html">David&nbsp;Eck</a></li>
 <li><b>July 22, 2022</b> &mdash; The original link to the printed version of this text at lulu.com no longer
 works.  I have updated the link on the front page of the web version of the book and in the downloaded web site,
 without making any other changes.  Here is the
