--- a/graphicstext/news-for-web.html
+++ b/graphicstext/news-for-web.html
@@ -32,7 +32,7 @@
 <h2>News for <a href="index.html"><i>Introduction to Computer Graphics</i></a></h2>
 
 <ul>
-<li><b>Summer, 2023</b> &mdash; <b>New chapter on WebGPU</b>.  In spite of saying previously
+<li><b>May 30, 2023</b> &mdash; <b>New chapter on WebGPU</b>.  In spite of saying previously
 that this textbook was in final form, I have decided to add a new chapter on WebGPU. I am writing it
 over the summer.  You can see what I have so far at 
 <a href="https://math.hws.edu/eck/cs424/graphicsbook-1.4/c9/index.html">this&nbsp;link</a>.</li>
