worked on some webgpu examples

--- a/graphicstext/demos/webgpu-samples/indexed_draw.html
+++ b/graphicstext/demos/webgpu-samples/indexed_draw.html
@@ -13,7 +13,7 @@
     on this program are for explaining the new features that it illustrates.
 -->
 <head>
-<title>Basic WebGPU Example: Colored Triangle</title>
+<title>WebGPU: Instanced Drawing</title>
 <style>
    body { 
       background-color: white;
