--- a/graphicstext/demos/webgpu-samples/draw_multiple.html
+++ b/graphicstext/demos/webgpu-samples/draw_multiple.html
@@ -133,7 +133,7 @@ async function initWebGPU() {
    });
    let error = await device.popErrorScope();
    if (error) {
-      throw Error("Compilation error in shader: <pre>\n" + error.message + "</pre>");
+      throw Error("Compilation error in shader; see Console for details.");
    }   
 }
 
