--- a/graphicstext/demos/c9/diskworld-webgpu-demo.html
+++ b/graphicstext/demos/c9/diskworld-webgpu-demo.html
@@ -235,51 +235,6 @@ async function initWebGPU() {
       }
     ];
 
-   let bindLayout0 = device.createBindGroupLayout({ // for vertex shader uniforms.
-       entries: [
-          {
-             binding: 0,
-             visibility: GPUShaderStage.VERTEX,
-             buffer: {
-                type: "uniform"
-             }
-          },
-          {
-             binding: 1,
-             visibility: GPUShaderStage.VERTEX,
-             buffer: {
-                type: "uniform"
-             }
-          }
-       ]
-    });
-
-   let bindLayout1 = device.createBindGroupLayout({  // for fragment shader uniforms
-       entries: [
-          {
-             binding: 0,
-             visibility: GPUShaderStage.FRAGMENT,
-             buffer: {
-                type: "uniform"
-             }
-          },
-          {
-             binding: 1,
-             visibility: GPUShaderStage.FRAGMENT,
-             buffer: {
-                type: "uniform"
-             }
-          },
-          {
-             binding: 2,
-             visibility: GPUShaderStage.FRAGMENT,
-             buffer: {
-                type: "uniform"
-             }
-          }
-       ]
-    });
-
    let pipelineDescriptor = {
        vertex: {
           module: shader,
@@ -305,9 +260,7 @@ async function initWebGPU() {
        multisample: { // enable multisampling in pipeline
          count: 4, 
        },
-       layout: device.createPipelineLayout({
-          bindGroupLayouts: [bindLayout0,bindLayout1]
-       })
+       layout: "auto"
     };
     
     pipeline = device.createRenderPipeline(pipelineDescriptor);
@@ -323,7 +276,7 @@ async function initWebGPU() {
     }); 
 
     bindGroup0 = device.createBindGroup({ // vertex shader uniforms
-       layout: bindLayout0,
+       layout: pipeline.getBindGroupLayout(0),
        entries: [
          { // projection matrix
             binding: 0,
@@ -336,8 +289,8 @@ async function initWebGPU() {
        ]
     });
 
-    bindGroup1 = device.createBindGroup({  // fragmetn shader uniforms
-       layout: bindLayout1,
+    bindGroup1 = device.createBindGroup({  // fragment shader uniforms
+       layout: pipeline.getBindGroupLayout(1),
        entries: [
          {  // material
             binding: 0,
