--- a/graphicstext/demos/webgpu-samples/Phong_lighting.html
+++ b/graphicstext/demos/webgpu-samples/Phong_lighting.html
@@ -164,18 +164,6 @@ async function initWebGPU() {
       }
     ];
 
-   let uniformBufferLayout = device.createBindGroupLayout({
-       entries: [
-          {
-             binding: 0,
-             visibility: GPUShaderStage.VERTEX | GPUShaderStage.FRAGMENT,
-             buffer: {
-                type: "uniform"
-             }
-          }
-       ]
-    });
-
    let pipelineDescriptor = {
        vertex: {
           module: shader,
@@ -198,9 +186,7 @@ async function initWebGPU() {
           topology: "triangle-list",
           cullMode: "back"  // no need to draw back faces, since all objects are closed solids.
        },
-       layout: device.createPipelineLayout({
-          bindGroupLayouts: [uniformBufferLayout]
-       })
+       layout: "auto"
     };
     
     renderPipeline = await device.createRenderPipelineAsync(pipelineDescriptor);
@@ -211,7 +197,7 @@ async function initWebGPU() {
     }); 
 
    uniformBindGroup = device.createBindGroup({
-       layout: uniformBufferLayout,
+       layout: renderPipeline.getBindGroupLayout(0),
        entries: [
          {
             binding: 0,
