--- a/graphicstext/demos/webgpu-samples/diskworld_webgpu.html
+++ b/graphicstext/demos/webgpu-samples/diskworld_webgpu.html
@@ -242,51 +242,7 @@ async function initWebGPU() {
       }
     ];
 
-   let bindLayout0 = device.createBindGroupLayout({ // for vertex shader uniforms.
-       entries: [
-          {
-             binding: 0,
-             visibility: GPUShaderStage.VERTEX,
-             buffer: {
-                type: "uniform"
-             }
-          },
-          {
-             binding: 1,
-             visibility: GPUShaderStage.VERTEX,
-             buffer: {
-                type: "uniform"
-             }
-          }
-       ]
-    });
-
-   let bindLayout1 = device.createBindGroupLayout({  // for fragment shader uniforms
-       entries: [
-          {
-             binding: 0,
-             visibility: GPUShaderStage.FRAGMENT,
-             buffer: {
-                type: "uniform"
-             }
-          },
-          {
-             binding: 1,
-             visibility: GPUShaderStage.FRAGMENT,
-             buffer: {
-                type: "uniform"
-             }
-          },
-          {
-             binding: 2,
-             visibility: GPUShaderStage.FRAGMENT,
-             buffer: {
-                type: "uniform"
-             }
-          }
-       ]
-    });
-
+    
    let pipelineDescriptor = {
        vertex: {
           module: shader,
@@ -312,9 +268,7 @@ async function initWebGPU() {
        multisample: { // enable multisampling in pipeline
          count: 4, 
        },
-       layout: device.createPipelineLayout({
-          bindGroupLayouts: [bindLayout0,bindLayout1]
-       })
+       layout: "auto"
     };
     
     pipeline = device.createRenderPipeline(pipelineDescriptor);
@@ -330,7 +284,7 @@ async function initWebGPU() {
     }); 
 
     bindGroup0 = device.createBindGroup({ // vertex shader uniforms
-       layout: bindLayout0,
+       layout: pipeline.getBindGroupLayout(0),
        entries: [
          { // projection matrix
             binding: 0,
@@ -344,7 +298,7 @@ async function initWebGPU() {
     });
 
     bindGroup1 = device.createBindGroup({  // fragmetn shader uniforms
-       layout: bindLayout1,
+       layout: pipeline.getBindGroupLayout(1),
        entries: [
          {  // material
             binding: 0,
