Added examples and an image for Section 9.6, and fixed some typos

--- a/graphicstext/demos/c5/textures.html
+++ b/graphicstext/demos/c5/textures.html
@@ -81,7 +81,7 @@ function createWorld() {
 /**
  *  When an animation is in progress, this function is called just before rendering each
  *  frame of the animation.  In this case, small amounts are added to the horizontal and
- *  veritcal textrue obbsets.
+ *  vertical texture offsets.
  */
 function updateForFrame() { 
     textureOffsetS -= 0.0023;
