--- a/graphicstext/demos/c7/generated-texcoords.html
+++ b/graphicstext/demos/c7/generated-texcoords.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Generated Tecture Coordinates</title>
+<title>Generated Texture Coordinates</title>
 <link rel="stylesheet" href="../demo.css">
     
     
