--- a/graphicstext/source/threejs/skybox.html
+++ b/graphicstext/source/threejs/skybox.html
@@ -39,7 +39,7 @@ function loadTextures(textureURLs, callback) {
     let loaded = 0;
     function loadedOne() {
         loaded++;
-        if (callback && loaded == textureURLs.length) { // all tectures have been loaded
+        if (callback && loaded == textureURLs.length) { // all textures have been loaded
             callback();
         }
     }
