--- a/graphicstext/source/webgl/texelFetch-MonaLisa-webgl2.html
+++ b/graphicstext/source/webgl/texelFetch-MonaLisa-webgl2.html
@@ -9,7 +9,7 @@
      are grabbed using texelFetch(), based on the position
      of the vertex in canvas coordinates.  Since the texture
      is the same size as the cavas, that's the same as
-     texel coordinates in the textrue.  When animation is turned
+     texel coordinates in the texture.  When animation is turned
      on, the vertex coordinates for the primitive are updated
      in each frame, making the points move.  This program requires
      that the texture be at relative URL "textures/mons-lisa.jpg".
