--- a/graphicstext/source/webgpu/first_texture.html
+++ b/graphicstext/source/webgpu/first_texture.html
@@ -472,7 +472,7 @@ window.onload = init;
 
 <p id="message"></p>
 
-<p style="margin-left:30px"><b>Select Tecture:</b></p>
+<p style="margin-left:30px"><b>Select Texture:</b></p>
 
 <p style="margin-left:70px">
    <label><input type="radio" name="tex" id="tex1">
@@ -480,7 +480,7 @@ window.onload = init;
    <br><label><input type="radio" name="tex" id="tex2">
        Use a pink/blue/yellow checkerboard pattern defined as data</label>
    <br><label><input type="radio" name="tex" id="tex3">
-       Use a Mona Lisa textrue defined from an image.</label>
+       Use a Mona Lisa texture defined from an image.</label>
 </p>
 
 <p style="color:red"><b id="message2">&nbsp;</b></p>
