--- a/graphicstext/demos/c2/transform-equivalence-2d.html
+++ b/graphicstext/demos/c2/transform-equivalence-2d.html
@@ -192,7 +192,7 @@ visible in the upper picture.  On the lower left, the viewport remains
 untransformed, while the objects are transformed.  On the lower
 right, the objects remain untransformed, while the viewport is transformed.
 You can see that in both cases, the content of the viewport is exactly
-what you see in the image on the upper right.  Admittedly, the "modeling transform"
+what you see in the image on the upper left.  Admittedly, the "modeling transform"
 version might be easier to understand, but the "viewport transform" version
 is equally valid.</p>
 <p>Remember that the effect of a transform on the viewport is the opposite
