Add missing word

--- a/graphicstext/demos/c2/transform-equivalence-2d.html
+++ b/graphicstext/demos/c2/transform-equivalence-2d.html
@@ -196,7 +196,7 @@ what you see in the image on the upper left.  Admittedly, the "modeling transfor
 version might be easier to understand, but the "viewport transform" version
 is equally valid.</p>
 <p>Remember that the effect of a transform on the viewport is the opposite
-of its effect on objects.  For example, a modeling transform that rotates
+of its effect on objects.  For example, a modeling transform that rotates an
 object clockwise will rotate the viewport counterclockwise.  And translating
 the objects to the right is equivalent to
 translating the viewport to the left.  You should take note of this
