working on Section 9.6

--- a/graphicstext/source/webgpu/diffusion.html
+++ b/graphicstext/source/webgpu/diffusion.html
@@ -37,7 +37,7 @@
 
 "use strict";
 
-/*  Some constants used in the program. Except fpr FILAMENT_SIZE, these are
+/*  Some constants used in the program. Except for FILAMENT_SIZE, these are
  *  used in the template strings that define the shader source code.  The
  *  init() function uses CANVAS_WIDTH and CANVAS_HEIGHT to set the size
  *  of the canvas.  The colors are used in the fragment shader.*/
