--- a/graphicstext/source/webgpu/life_3.html
+++ b/graphicstext/source/webgpu/life_3.html
@@ -2,7 +2,7 @@
 <!--
    This program implements John H. Conway's "Game of Life". It is
    functionally identical to life_1.html, but it moves the computation
-   of the next generation into a computer shader.  It is mainly
+   of the next generation into a compute shader.  It is mainly
    an example of using a compute shader with a two-dimensional task.
 -->
 <head>
