Finish Section 9.6, on WebGPU compute shaders.

--- a/graphicstext/source/webgpu/life_3.html
+++ b/graphicstext/source/webgpu/life_3.html
@@ -339,8 +339,8 @@ function draw() {
 
 
 /**
- *  Compute the next generation and copy it to the currentGeneration texture
- *  that is used in the render pipeline.
+ *  Compute the next generation and copy it to the currentGeneration texture.
+ *  (Only currentGenertion is used in the render shader.)
  */
 function computeNextGeneration() {
    let commandEncoder = device.createCommandEncoder();
