Patches chap 2 (#2) from Danny Hurlburt
* Remove extra word

* Fix pluralization

* Add missing word

* Mark as new word

* Remove awkward wording

* Remove commas
First comma not needed because it is not separating independent clauses.
Second comma not needed.

* Not mark as new word
Already seen in chap 1.

* Fix word

* Fix coordinate

* Fix typos

* Fix typos

* Fix pluralization

* Remove comma
Seems unnecessary

* Fix typo

* Fix typo

* Remove extraneous word

* Fix typos

* Fix reference

* Add missing word

* Revert some suggestions

* Remove parameter not wanted in the pseudocode

* Add missing word

* Fix typos

* Revert a suggestion

* Remove extra comma

* Remove repeated words

* Remove extra word

* Fix method name

* Remove extra comma

* Fix whitespace

* Remove extraneous word

* Remove extraneous word

* Remove extraneous word

* Revert some suggestions

* Put comma back in intended place

* Revert some suggestions

---------

Co-authored-by: Danny Hurlburt <dhurlburtusa@user.noreply.github.com>

--- a/graphicstext/demos/c2/transform-equivalence-2d.html
+++ b/graphicstext/demos/c2/transform-equivalence-2d.html
@@ -192,11 +192,11 @@ visible in the upper picture.  On the lower left, the viewport remains
 untransformed, while the objects are transformed.  On the lower
 right, the objects remain untransformed, while the viewport is transformed.
 You can see that in both cases, the content of the viewport is exactly
-what you see in the image on the upper right.  Admittedly, the "modeling transform"
+what you see in the image on the upper left.  Admittedly, the "modeling transform"
 version might be easier to understand, but the "viewport transform" version
 is equally valid.</p>
 <p>Remember that the effect of a transform on the viewport is the opposite
-of its effect on objects.  For example, a modeling transform that rotates
+of its effect on objects.  For example, a modeling transform that rotates an
 object clockwise will rotate the viewport counterclockwise.  And translating
 the objects to the right is equivalent to
 translating the viewport to the left.  You should take note of this
